--- a/index.css
+++ b/index.css
@@ -11,12 +11,12 @@ body
 h1
 {
 	color: silver;
-	text-align: center;
+	text-align: left;
 }/*h1*/
 
 h2
 {
-	text-align: center;
+	text-align: left;
 	background: silver;
 	border-style: groove;
 	border-width: 10px;
